Update gdb.md