@@ -1,6 +1,6 @@
-### Debugging Code
+## Debugging Code
 
-#### GDB
+### GDB
 
 -   [gdb - global thread
     dump](http://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&ved=0CDYQFjAB&url=http%3A%2F%2Fsourceware.org%2Fgdb%2Fonlinedocs%2Fgdb%2FThreads.html&ei=pSehT_uNJcqj-gaq2aSjBw&usg=AFQjCNERBsV1ICcafttBSHv1XZKuRQlNHQ):
@@ -17,7 +17,7 @@
 
         set print elements 10000
 
-#### Memory Leaks
+### Memory Leaks
 
 -   Glib - mtrace(): Enable tracing by calling mtrace() right on startup
     and set environment variable
@@ -35,12 +35,4 @@
 -   Valgrind
 
         valgrind --leak-check=yes <executable> [ [...]]
-
--   [JVM - Verbose
-    GC](http://javaeesupportpatterns.blogspot.de/2011/10/verbosegc-output-tutorial-java-7.html):
-
-        -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/gc.log
-
--   [JVM -
-    jstat](http://docs.oracle.com/javase/6/docs/technotes/tools/share/jstat.html):
 
